<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="tdc.edu.vn.tracnghiem2022.TNKQActivity"
android:orientation="vertical">

<LinearLayout
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="5"
    android:orientation="vertical">

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal"
    android:gravity="center"
    >
    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_cau_hoi"
        android:text="@string/btnLeft"/>
    <Button
        android:id="@+id/btnTinhDiem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCenter"/>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRight"/>
</LinearLayout>
</LinearLayout>