<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tdc.edu.vn.tracnghiem2022.TNKQActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >
        <TextView
            android:id="@+id/txtViewCauHoi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/size_cau_hoi"
            android:textColor="@color/color_cau_hoi"
            android:text="@string/txt_trac_nghiem_2022"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="left"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rad1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lua_chon_1"
                    />
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rad2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lua_chon_2"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical"
            android:gravity="left"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rad3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lua_chon_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rad4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lua_chon_4"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>